--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,8 @@
         {% endblock %}
     </head>
     <body>
+        {% block header %}{% include "partials/_header.html.twig" %}{% endblock %}
         {% block body %}{% endblock %}
+
     </body>
 </html>
