--- a/templates/pages/ingredient/index.html.twig
+++ b/templates/pages/ingredient/index.html.twig
@@ -3,6 +3,14 @@
 
 {% block body %}
     <div class="container mt-4">
+
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-dismissible alert-success mt-4">
+            {{ message }}
+            </div>
+        {% endfor %}
+
+
         <h1>Mes ingrédients</h1>
         {% if not ingredients.items is same as ([]) %}
             <h4>{{ ingredients.getTotalItemCount }} ingrédients</h4>
