--- a/templates/pages/ingredient/new.html.twig
+++ b/templates/pages/ingredient/new.html.twig
@@ -1,7 +1,29 @@
 {% extends "base.html.twig" %}
+
 {% block body %}
-<div class="container" >
-    <h1 class="mt-4">Création d'un ingrédient</h1>
-        {{ form(form) }}
+    <div class="container">
+        <h1 class="mt-4">Création d'un ingrédient</h1>
+
+        {{ form_start(form) }}
+            <div class="row">
+                <div class="form-error">
+                    {{ form_errors(form.name) }}
+                </div>
+                {{ form_label(form.name) }}
+                {{ form_widget(form.name) }}
+            </div>
+
+            <div class="row">
+                <div class="form-error">
+                    {{ form_errors(form.price) }}
+                </div>
+                {{ form_label(form.price) }}
+                {{ form_widget(form.price) }}
+            </div>
+
+            <div class="row">
+                {{ form_row(form.submit) }}
+            </div>
+        {{ form_end(form) }}
     </div>
 {% endblock %}
