Partie 2 : CRUD des ingrédients - Supprimer un ingrédient

--- a/templates/pages/ingredient/index.html.twig
+++ b/templates/pages/ingredient/index.html.twig
@@ -21,6 +21,8 @@
                     <th scope="col">Nom</th>
                     <th scope="col">Prix</th>
                     <th scope="col">Date de création</th>
+                    <th scope="col">Edition</th>
+                    <th scope="col">Suppression</th>
                 </tr>
             </thead>
             <tbody>
@@ -30,6 +32,14 @@
                     <td>{{ ingredient.name }}</td>
                     <td>{{ ingredient.price }}</td>
                     <td>{{ ingredient.createdAt|date('d/m/Y') }}</td>
+
+                    <td>
+                        <a href="{{ path('ingredient_edit', { id: ingredient.id }) }}" class="btn btn-info">Modifier</a>
+                    </td>
+                    <td>
+                        <a href="{{ path('ingredient_remove', { id: ingredient.id }) }}" class="btn btn-warning">Supprimer</a>
+                    </td>
+
                 </tr>
             {% endfor %}
             </tbody>
