Partie 3 : CRUD des recettes - Liste des recettes

--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -11,6 +11,16 @@
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path('app_ingredient') }}">
+            Ingrédients
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path('app_recipe') }}">
+            Recettes
+          </a>
+        </li>
       </ul>
     </div>
   </div>
