--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -1,23 +1,23 @@
 {% extends "base.html.twig" %}
-{% block title %} SymRecipe - Accueil{% endblock %}
+{% block title %}SymRecipe - Accueil{% endblock %}
 {% block body %}
-<h1>Hello SymRecipe !</h1>
-<div class="container mt-4">
-<div class="jumbotron">
-<p class="lead">
-SymRecipe est une application qui va te permettre de créer
-des recettes à base d'ingrédients que tu auras toit-même
-créer. Tu pourras partager tes recettes à la communauté du
-site, ou bien les garder en privées.
-</p>
-<hr class="my-4">
-<p>
-Pour commencer, rendez-vous sur la page d'inscription
-pour utiliser l'application.
-</p>
-<a class="btn btn-primary btn-lg" href="#" role="button">
-Inscription
-</a>
-</div>
-</div>
+    <h1>Hello SymRecipe !</h1>
+    <div class="container mt-4">
+        <div class="jumbotron">
+            <p class="lead">
+                SymRecipe est une application qui va te permettre de créer
+                des recettes à base d'ingrédients que tu auras toi-même
+                créés. Tu pourras partager tes recettes à la communauté du
+                site, ou bien les garder en privé.
+            </p>
+            <hr class="my-4">
+            <p>
+                Pour commencer, rendez-vous sur la page d'inscription
+                pour utiliser l'application.
+            </p>
+            <a class="btn btn-primary btn-lg" href="#" role="button">
+                Inscription
+            </a>
+        </div>
+    </div>
 {% endblock %}
