--- a/templates/pages/recipe/index.html.twig
+++ b/templates/pages/recipe/index.html.twig
@@ -1,20 +1,46 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello RecipeController!{% endblock %}
+{% block title %}Mes recettes{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<div class="container">
+    <h1>Mes recettes</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <a href="{{ path('recipe_new') }}" class="btn btn-primary">Créer une recette</a>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/luna/COURS/COURS-2025/Architecture Logiciel - Alexandre Brabant/symrecipe/symrecipe/src/Controller/RecipeController.php</code></li>
-        <li>Your template at <code>/home/luna/COURS/COURS-2025/Architecture Logiciel - Alexandre Brabant/symrecipe/symrecipe/templates/recipe/index.html.twig</code></li>
-    </ul>
+    <table class="table table-hover">
+        <thead>
+            <tr class="table-dark">
+                <th>Numéro</th>
+                <th>Nom</th>
+                <th>Prix</th>
+                <th>Difficulté</th>
+                <th>Date de création</th>
+                <th>Édition</th>
+                <th>Suppression</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for recipe in recipes %}
+                <tr class="table-light">
+                    <td>{{ recipe.id }}</td>
+                    <td>{{ recipe.name }}</td>
+                    <td>{{ recipe.price }}</td>
+                    <td>{% if recipe.difficulty %}{{ recipe.difficulty }}{% else %}Non renseigné{% endif %}</td>
+                    <td>{{ recipe.createdAt|date('d/m/Y') }}</td>
+                    <td>
+                        <a href="#" class="btn">TODO</a>
+                    </td>
+                    <td>
+                        <a href="#" class="btn">TODO</a>
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
+    <div class="navigation d-flex justify-content-center mt-4">
+        {{ knp_pagination_render(recipes) }}
+    </div>
 </div>
 {% endblock %}
